testdata/baselines/reference/submodule/compiler/exportDefaultMarksIdentifierAsUsed.errors.txt
b.js(3,5): error TS2339: Property 'fn' does not exist on type '{}'.


==== a.js (0 errors) ====
    const Obj = {};
    export default Obj;
==== b.js (1 errors) ====
    import Obj from './a';
    
    Obj.fn = function() {};
        ~~
!!! error TS2339: Property 'fn' does not exist on type '{}'.